...
  [self.tableView reloadData];
}

-(NSArray *)drawerItems
{
  if (self.firmwareUpdateEnabled) {
    return @[@"Update Firmware…", @"Options", @"Tutorial", @"Help", /* @"iOS Framework", @"Command API", @"Datasheet", @"Purchase Starter Kit",*/ @"About…"];
  } else {
      return @[@"Options", @"Tutorial", @"Help", /*@"iOS Framework", @"Command API", @"Datasheet", @"Purchase Starter Kit", */@"About…"];
  }
}

@end
...
