...
    self.navigationItem.rightBarButtonItem = mmDrawerBarButtonItem;
    
    self.navigationItem.leftBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:StartButtonTitle style:UIBarButtonItemStylePlain target:self action:@selector(scanAction:)];
    [self.navigationItem.leftBarButtonItem setTitleTextAttributes:@{ NSForegroundColorAttributeName : [UIColor lightGrayColor], NSFontAttributeName : [UIFont systemFontOfSize: 14.0 ] } forState:UIControlStateDisabled];
    self.navigationItem.leftBarButtonItem.enabled = NO;
    
    self.navigationItem.backBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"Disconnect" style:UIBarButtonItemStylePlain target:nil action:nil];
    
    self.isScanning = NO;
    self.bluetoothReady = NO;
    [[AppDelegate sharedAppDelegate] addObserver:self forKeyPath:@"bluetoothReady" options:NSKeyValueObservingOptionNew context:nil];
    [[AppDelegate sharedAppDelegate] addObserver:self forKeyPath:@"isScanning" options:NSKeyValueObservingOptionNew context:nil];
    
...
